deploy/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubefusion-default
  namespace: gitops-platform
spec:
  podSelector: {}
  policyTypes: [Ingress,Egress]
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
